--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,11 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/cad-aluno",
+            "baseHref": "/",
+            "outputPath": {
+                "base": "docs",
+                "browser": ""
+              },
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
